# cookiecutter-fastapi

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.sh  pre_gen_project.py  pre_gen_project.sh
{{cookiecutter.__package_name}}/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
{{cookiecutter.__package_name}}/data/: README.md
{{cookiecutter.__package_name}}/deployment/: Dockerfile  README.md  cloudbuild.yaml
{{cookiecutter.__package_name}}/docs/: README.md  gcp_setup.md
{{cookiecutter.__package_name}}/docs/src/: README.md
{{cookiecutter.__package_name}}/models/: README.md
{{cookiecutter.__package_name}}/notebooks/: README.md
{{cookiecutter.__package_name}}/pipelines/assembly/: Dockerfile  cloudbuild.yaml
{{cookiecutter.__package_name}}/scripts/: setup_project.sh
{{cookiecutter.__package_name}}/src/{{cookiecutter.__package_name}}/: __init__.py  logger.py  settings.py
{{cookiecutter.__package_name}}/src/{{cookiecutter.__package_name}}/app/: __init__.py  main.py  schemas.py
{{cookiecutter.__package_name}}/src/{{cookiecutter.__package_name}}/app/dependencies/: __init__.py
{{cookiecutter.__package_name}}/src/{{cookiecutter.__package_name}}/app/exceptions/: __init__.py  custom_handlers.py
{{cookiecutter.__package_name}}/src/{{cookiecutter.__package_name}}/app/middleware/: logging_middleware.py
{{cookiecutter.__package_name}}/src/{{cookiecutter.__package_name}}/app/middlewares/: __init__.py  logging_middleware.py
{{cookiecutter.__package_name}}/src/{{cookiecutter.__package_name}}/app/routers/: __init__.py  health_router.py
{{cookiecutter.__package_name}}/src/{{cookiecutter.__package_name}}/app/schemas/: __init__.py  health.py
{{cookiecutter.__package_name}}/src/{{cookiecutter.__package_name}}/core/: __init__.py
{{cookiecutter.__package_name}}/src/{{cookiecutter.__package_name}}/core/utils/: __init__.py
{{cookiecutter.__package_name}}/tests/: __init__.py
{{cookiecutter.__package_name}}/tests/data_validation/: __init__.py
{{cookiecutter.__package_name}}/tests/unit/: __init__.py  test_{{cookiecutter.__package_name}}.py
