[tool.poetry]
name = "cookiecutter_fastapi"
version = "0.1.1"
description = "Template repo for FastAPI projects using LLM models"
authors = ["Lucas Moreira Guimarães <lucasmtz@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
toml = "^0.10.2"
tomli = "^2.0.1"
commitizen = "^3.6.0"
bandit = "^1.7.5"
black = "^23.3.0"
coverage = "^7.2.5"
docformatter = "^1.7.0"
dvc = { extras = ["gs"], version = "^2.56.0" }
ipykernel = "^6.23.1"
ipywidgets = "^8.0.6"
isort = "^5.12.0"
jupyterlab = "^4.0.0"
mypy = "^1.3.0"
pdoc3 = "^0.10.0"
pre-commit = "^3.3.1"
pydocstyle = "^6.3.0"
pylint = "^2.17.4"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.docformatter]
recursive = true
in-place = true
wrap-summaries = 120
wrap-descriptions = 120
blank = true
pre-summary-newline = true

[tool.pydocstyle]
convention = "pep257"
match-dir = '^(?!tests$)[^\.].*'

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true

[tool.black]
line-length = 120
exclude = ["tests"]

[tool.pylint]
disable = ["missing-module-docstring", "fixme"]
max-args = 6

[tool.pylint.format]
max-line-length = 120

[tool.pylint.main]
extension-pkg-allow-list = ["pydantic"]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ['tests']
plugins = ["pydantic.mypy", "numpy.typing.mypy_plugin"]
follow_imports = "normal"

[tool.bandit]
skips = []

[tool.coverage.run]
branch = true
source = ["src/cookiecutter_fastapi"]
omit = ["*constants.py"]

[tool.coverage.report]
ignore_errors = false
show_missing = true
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "AbstractMethodError",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "coverage_html_report"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
filterwarnings = ["ignore::DeprecationWarning"]
pythonpath = "."

[tool.commitizen]
bump_message = "chore(release): $current_version → $new_version"
update_changelog_on_bump = true
version = "0.1.1"
version-scheme = "pep440"
version_files = ["pyproject.toml:^version"]
